After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 735920 - Fix URL used for flickr webservices
Fix URL used for flickr webservices
Status: RESOLVED FIXED
Product: librest
Classification: Platform
Component: other
git master
Other Linux
: Normal normal
: ---
Assigned To: librest-maint
librest-maint
Depends on:
Blocks:
 
 
Reported: 2014-09-02 19:47 UTC by Christophe Fergeau
Modified: 2014-09-03 08:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix URL used for flickr rest calls (1.85 KB, patch)
2014-09-02 19:47 UTC, Christophe Fergeau
committed Details | Review

Description Christophe Fergeau 2014-09-02 19:47:19 UTC
It's no longer api.flickr.com and it must be accessed through https
Comment 1 Christophe Fergeau 2014-09-02 19:47:54 UTC
Created attachment 285176 [details] [review]
Fix URL used for flickr rest calls

https must be used, and the correct URL for uploads is up.flickr.com
Comment 2 Marc-Andre Lureau 2014-09-02 21:00:30 UTC
Review of attachment 285176 [details] [review]:

ack
Comment 3 Christophe Fergeau 2014-09-03 08:57:40 UTC
Attachment 285176 [details] pushed as 19c5f95 - Fix URL used for flickr rest calls