Fix URL used for flickr rest calls

https must be used, and the correct URL for uploads is up.flickr.com

https://bugzilla.gnome.org/show_bug.cgi?id=735920